--- a/hello.html
+++ b/hello.html
@@ -2,11 +2,15 @@
 <HTML>
    <HEAD>
       <TITLE>
-         A Small Hello 
+        Una prueba con Hello world 
       </TITLE>
    </HEAD>
 <BODY>
-   <H1>Hi</H1>
-   <P>This is very minimal "hello world" HTML document.</P> 
+   <H1>Hello world!!</H1>
+   <P>primer archivo con git ... !!!</P> 
+
+
+
+
 </BODY>
 </HTML>
